Update Projs Image

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang=en>
 	<head>
-		<title>Page Title</title>
+		<title>Ben Ikeler</title>
 		<meta charset="utf-8">
         <link rel="stylesheet" href="./css/portfolio.css">
 	</head>
@@ -79,18 +79,13 @@
             </div>
         </section>
 
-        
-
-        
-
-
         <!-------------------
             PROJECTS SECTION
         -------------------->
 
         <section class="col-con" id="projects">
             <div class="column">
-                <img class="swell" src="./images/projs-pic.png" alt="avatar">
+                <img class="swell" src="./images/projs-pic_dark.png" alt="avatar">
             </div>
             <div class="column">
                 <div class="projects-text">
