Update Avatar FXs
Added js for avatar to follow mouse

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Ben Ikeler</title>
 		<meta charset="utf-8">
         <link rel="stylesheet" href="./css/portfolio.css">
+        <script src="./js/portfolio.js" defer></script>
 	</head>
 	<body>
 
@@ -74,8 +75,8 @@
                     </div>
                 </div>
             </div>
-            <div class="column">
-                <img class="swell" src="./images/Me_Sprite_300.png" alt="avatar">
+            <div class="column rotate-fx-con">
+                <img class="rotate-fx" src="./images/Me_Sprite_300.png" alt="avatar">
             </div>
         </section>
 
