--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
                         method="POST"
                         >
                         <label>NAME</label> <br>
-                        <input type="text" name="name"> <br>
+                        <input type="text" name="name" required> <br>
                         <label>EMAIL</label> <br>
-                        <input type="email" name="email"> <br>
+                        <input type="email" name="email" required> <br>
                         <label>MESSAGE</label> <br>
-                        <textarea name="message"></textarea> <br>
+                        <textarea name="message" required></textarea> <br>
                         <!-- your other form fields go here -->
                         <button onclick="" type="submit">SEND</button>
                     </form>
