--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         -------------------->
 
         <div id="my-footer">
-            <p>© Ben Ikeler.com</p>
+            <p>© Ben Ikeler</p>
         </div>
 
 	</body>
