--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
                 </div>
                 <div class="pill-container">
                     <div class="pill" >
+                        <p>C#</p>
+                    </div>
+                    <div class="pill" >
+                        <p>Python</p>
+                    </div>
+                    <div class="pill" >
                         <p>HTML</p>
                     </div>
                     <div class="pill" >
@@ -72,6 +78,9 @@
                     </div>
                     <div class="pill" >
                         <p>JS</p>
+                    </div>
+                    <div class="pill" >
+                        <p>SQL</p>
                     </div>
                 </div>
             </div>
