removed temp page indicator

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         -------------------->
 
         <!-- temp placholder for page indicators -->
-        <div id="side-nav">
+        <!-- <div id="side-nav">
             <p>o</p>
             <p>o</p>
             <p>o</p>
             <p>o</p>
-        </div>
+        </div> -->
 
         <!-------------------
             WELCOME SECTION
