--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="column">
                 <div class="about-text">
                     <p class="section-title">About</p>
-                    <p>I love software development! I have some experience as a professional artist but I found my try medium to be code. </p>
+                    <p>I love software development! I have some experience as a professional artist, but I found my true medium to be code. </p>
                     <p>I am a graduate of The Tech Academy&apos;s Software Developer Boot Camp, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, C# and more.</p>
                     <p>I am a full-stack developer and would love to work with you on your project. <a href="#contact">Contact</a> me below!</p>
                 </div>
