--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <div class="column">
                 <div class="about-text">
                     <p class="section-title">About</p>
-                    <p>I love software development! I have some experience as a professional artist, but I found my true medium to be code. </p>
-                    <p>I am a graduate of The Tech Academy&apos;s Software Developer Boot Camp, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, C# and more.</p>
+                    <p>I love software development! I started my career as a professional artist, but I found my true creative medium to be code. </p>
+                    <p>I am a graduate of The Tech Academy&apos;s Software Developer Boot Camp, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, C# and more.  For more info on me, check out my <a href="https://drive.google.com/file/d/177XJdASyhfYNIjIFM18q1hhRKtYLrk08/view?usp=share_link" target=”_blank”>resume</a> or jump over to my <a href="https://www.linkedin.com/in/benikeler/" target=”_blank”>LinkedIn page</a>.</p>
                     <p>I am a full-stack developer and would love to work with you on your project. <a href="#contact">Contact</a> me below!</p>
                 </div>
                 <div class="pill-container">
@@ -117,6 +117,10 @@
         <section id="contact" class="contact col-con">
             <div class="column">
                 <p class="section-title">Contact</p>
+                <div class="linkedin">
+                    <img class="" src="./images/linkedin-48.png" alt="linkedin logo">
+                    <a href="https://www.linkedin.com/in/benikeler/" target=”_blank”>Ben on LinkedIn</a>
+                </div>
             </div>
             <div class="column">
                 <div class="form-card">
