--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
 <body>
     <!-- TOP NAV SECTION -->
     <nav id="myNav">
-    <ul>
-        <li><a class="nav-link" href="#about">ABOUT</a></li>
-        <li class="dropdown">
-            <a class="nav-link" href="#projects">PROJECTS</a>
-            <ul class="dropdown-content">
-                <li><a class="dropdown-link" href="project_tallywho.html">Tally Who?</a></li>
-                <!-- Add more project links as needed -->
-            </ul>
-        </li>
-        <li><a class="nav-link" href="#contact">CONTACT</a></li>
-    </ul>
+        <ul>
+            <li><a class="nav-link" href="index.html#about">ABOUT</a></li>
+            <li class="dropdown">
+                <a class="nav-link" href="index.html#projects">PROJECTS</a>
+                <ul class="dropdown-content">
+                    <li><a class="dropdown-link" href="project_tallywho.html">Tally Who?</a></li>
+                    <!-- Add more project links as needed -->
+                </ul>
+            </li>
+            <li><a class="nav-link" href="index.html#contact">CONTACT</a></li>
+        </ul>
     </nav>
-   
 
     <!-- WELCOME SECTION -->
     <section class="col-con" id="welcome">
@@ -40,98 +39,106 @@
         </div>
     </section>
     <!-- END WELCOME SECTION -->
+
     <!-- ABOUT SECTION -->
     <section class="col-con" id="about">
-        <div class="column">
-            <div class="about-text">
-                <p class="section-title">About</p>
-                <p>Hey, I'm Ben! I started my career as a professional artist and after learning how to be a developer, found a passion for creating with code. </p>
-                <p>I am a graduate of The Tech Academy&apos;s Software Developer Boot Camp, and I'm proficient in various programming languages such as: HTML, CSS, JavaScript, SQL, C# and more. For more info on me, check out my <a href="https://drive.google.com/file/d/1N4mP8yWnsjIxQnvjwRB6u_33w38-xKrz/view?usp=share_link" target="_blank">resume</a> or jump over to my <a href="https://www.linkedin.com/in/benikeler/" target="_blank">LinkedIn page</a>.</p>
-                <p>As a full-stack developer, I would love to work with you on your project. <a href="#contact">Contact</a> me below!</p>
+        <div class="width-fix two-columns">
+            <div class="column">
+                <div class="about-text">
+                    <p class="section-title">About</p>
+                    <p>Hey, I'm Ben! I started my career as a professional artist and after learning how to be a developer, found a passion for creating with code.</p>
+                    <p>I am a graduate of The Tech Academy's Software Developer Boot Camp, and I'm proficient in various programming languages such as: HTML, CSS, JavaScript, SQL, C# and more. For more info on me, check out my <a href="https://drive.google.com/file/d/1N4mP8yWnsjIxQnvjwRB6u_33w38-xKrz/view?usp=share_link" target="_blank">resume</a> or jump over to my <a href="https://www.linkedin.com/in/benikeler/" target="_blank">LinkedIn page</a>.</p>
+                    <p>As a full-stack developer, I would love to work with you on your project. <a href="#contact">Contact</a> me below!</p>
+                </div>
+                <div class="pill-container">
+                    <div class="pill">
+                        <p>C#</p>
+                    </div>
+                    <div class="pill">
+                        <p>.NET</p>
+                    </div>
+                    <div class="pill">
+                        <p>Python</p>
+                    </div>
+                    <div class="pill">
+                        <p>HTML</p>
+                    </div>
+                    <div class="pill">
+                        <p>CSS</p>
+                    </div>
+                    <div class="pill">
+                        <p>JS</p>
+                    </div>
+                </div>
+                <div style="margin-top: 20px;" class="pill-container">
+                    <div class="pill">
+                        <p>SQL</p>
+                    </div>
+                    <div class="pill">
+                        <p>Flutter/Dart</p>
+                    </div>
+                    <div class="pill">
+                        <p>Azure</p>
+                    </div>
+                </div>
             </div>
-            <div class="pill-container">
-                <div class="pill">
-                    <p>C#</p>
-                </div>
-                <div class="pill">
-                    <p>.NET</p>
-                </div>
-                <div class="pill">
-                    <p>Python</p>
-                </div>
-                <div class="pill">
-                    <p>HTML</p>
-                </div>
-                <div class="pill">
-                    <p>CSS</p>
-                </div>
-                <div class="pill">
-                    <p>JS</p>
-                </div>
+            <div class="column rotate-fx-con">
+                <img class="rotate-fx" src="./images/Me_Sprite_300.png" alt="avatar">
             </div>
-            <div style="margin-top: 20px;" class="pill-container">
-                <div class="pill">
-                    <p>SQL</p>
-                </div>
-                <div class="pill">
-                    <p>Flutter/Dart</p>
-                </div>
-                <div class="pill">
-                    <p>Azure</p>
-                </div>
-            </div>
-        </div>
-        <div class="column rotate-fx-con">
-            <img class="rotate-fx" src="./images/Me_Sprite_300.png" alt="avatar">
         </div>
     </section>
     <!-- END ABOUT SECTION -->
+
     <!-- PROJECTS SECTION -->
     <section class="col-con" id="projects">
-        <div class="arrow left-arrow" id="left-arrow">&#8249;</div>
-        <div class="project-container" id="project-container">
-            <!-- START Projects -->
-            <div class="project-slide active">
-                <div class="column">
-                    <img class="swell" src="./images/projs-pic_dark.png" alt="Project 1 Image">
-                </div>
-                <div class="column">
-                    <div class="projects-text">
-                        <p class="section-title">Projects</p>
-                        <p>>>> Check out some of my projects >>></p>
-                        <p>If you want to see some of my open projects here's my GitHub!</p>
+        <div class="width-fix two-columns">
+            <div class="arrow left-arrow" id="left-arrow">&#8249;</div>
+            <div class="project-container" id="project-container">
+                <!-- START Projects -->
+                <div class="project-slide active">
+                    <div class="column">
+                        <img class="swell" src="./images/projs-pic_dark.png" alt="Project 1 Image">
                     </div>
-                    <div class="gh-btn">
-                        <img src="./images/github-mark-white.png" alt="GitHub Icon">
-                        <a href="https://github.com/jbikeler" target="_blank">GitHub</a>
+                    <div class="column">
+                        <div class="projects-text">
+                            <p class="section-title">Projects</p>
+                            <p>>>> Check out some of my projects >>></p>
+                            <p>If you want to see some of my open projects here's my GitHub!</p>
+                        </div>
+                        <div class="gh-btn">
+                            <img src="./images/github-mark-white.png" alt="GitHub Icon">
+                            <a href="https://github.com/jbikeler" target="_blank">GitHub</a>
+                        </div>
                     </div>
                 </div>
+                <!-- TALLYWHO -->
+                <div class="project-slide">
+                    <div class="column">
+                        <div class="projects-text">
+                            <p class="section-title">Tally Who?</p>
+                            <p>A score keeping app. Like boardgames? This might interest you.</p>
+                            <p>It will soon be available for purchase on your app store!</p>
+                        </div>
+                        <div class="gh-btn">
+                            <a href="project_tallywho.html" target="_blank">View Project</a>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <a href="project_tallywho.html">
+                            <img class="swell" src="./images/PhoneScreen_Mockup.png" alt="TallyWho Mockup">
+                        </a>
+                    </div>
+                </div>
+                <!-- END Projects -->
             </div>
-            <!-- TALLYWHO -->
-            <div class="project-slide">
-                <div class="column">
-                    <div class="projects-text">
-                        <p class="section-title">Tally Who?</p>
-                        <p>A score keeping app. If you like boardgames, this might interest you.</p>
-                        <p>It will soon be available for purchase on your app store!</p>
-                    </div>
-                    <div class="gh-btn">
-                        <a href="project_tallywho.html" target="_blank">View Project</a>
-                    </div>
-                </div>
-                <div class="column">
-                    <a href="project_tallywho.html">
-                        <img class="swell" src="./images/PhoneScreen_Mockup.png" alt="TallyWho Mockup">
-                    </a>
-                </div>
-            </div>
-            <!-- END Projects -->
+            <div class="arrow right-arrow" id="right-arrow">&#8250;</div>
         </div>
-        <div class="arrow right-arrow" id="right-arrow">&#8250;</div>
     </section>
     <!-- END PROJECTS SECTION -->
+
     <!-- CONTACT SECTION -->
     <section id="contact" class="contact col-con">
+        <div class="width-fix two-columns">
             <div class="column">
                 <p class="section-title">Contact</p>
                 <div class="linkedin">
@@ -152,6 +159,7 @@
                     </form>
                 </div>
             </div>
+        </div>
     </section>
 
     <!-- FOOTER SECTION -->
