--- a/project_tallywho.html
+++ b/project_tallywho.html
@@ -13,16 +13,21 @@
     <nav id="myNav">
         <ul>
             <li><a class="nav-link" href="index.html#about">ABOUT</a></li>
-            <li><a class="nav-link" href="index.html#projects">PROJECTS</a></li>
-            <li id="contact-link"><a class="nav-link" href="index.html#contact">CONTACT</a></li>
+            <li class="dropdown">
+                <a class="nav-link" href="index.html#projects">PROJECTS</a>
+                <ul class="dropdown-content">
+                    <li><a class="dropdown-link" href="project_tallywho.html">Tally Who?</a></li>
+                    <!-- Add more project links as needed -->
+                </ul>
+            </li>
+            <li><a class="nav-link" href="index.html#contact">CONTACT</a></li>
         </ul>
     </nav>
 
     <div>
         <!-- START TALLYWHO INTRO SECTION -->
-        <section>
+        <section class="top-section">
             <div class="proj-section-container">
-                <img class="proj-bg-img" src="./images/TallyWho_BG.png" alt="TallyWho BG">
                 <div class="project-section-content">
                     <div class="project-intro">
                         <div style="display: flex; justify-content: center;">
@@ -32,15 +37,15 @@
                         <div class="intro-row">
                             <div class="intro-col">
                                 <p class="intro-col-h">Problem</p>
-                                <p>So many board games so little time. As an avid board game lover, I have often found myself situations where I am keeping the scores notes or pieces of paper. It would be great to be able to keep all of your scores and all of your games in one place as well as be able to recall previous games and pick up where you left off if you had to end the game early.</p>
+                                <p>So many board games, so little time. As an avid board game lover, I have often found myself in situations where I am keeping scores on notes or pieces of paper. It would be great to be able to keep all of your scores and all of your games in one place, as well as be able to recall previous games and pick up where you left off if you had to end the game early.</p>
                             </div>
                             <div class="intro-col">
                                 <p class="intro-col-h">Solution</p>
-                                <p>Create a score keeping app that allows the user to save data such as the players names, name of the game, and the scores of each player.</p>
+                                <p>Create a score-keeping app that allows the user to save data such as the players' names, the name of the game, and the scores of each player.</p>
                             </div>
                             <div class="intro-col">
                                 <p class="intro-col-h">Concept</p>
-                                <p>Allow for a simple user interface in which you could easily add players as well as include some common boardgame tools such as, a countdown timer and a dice roller.</p>
+                                <p>Allow for a simple user interface in which you can easily add players and include some common board game tools, such as a countdown timer and a dice roller.</p>
                             </div>
                         </div>
                     </div>
@@ -53,16 +58,16 @@
                 <div>
                     <div class="projects-text">
                         <p class="section-title">Design</p>
-                        <p>I wanted the visual style to be simple and clean, but still remain playful. Each element should be distinct from one another yet fit together like a finished jig-saw puzzle. I also wanted to attempt to break free from the classic material design we see in every modern app. It's good to have consistency between apps so that users understand a certain design language, but I also think that there is a lot of power in novalty, and that's what I wanted to push here.</p>
+                        <p>I wanted the visual style to be simple and clean, but still remain playful. Each element should be distinct from one another yet fit together like a finished jigsaw puzzle. I also wanted to attempt to break free from the classic material design we see in every modern app. It's good to have consistency between apps so that users understand a certain design language, but I also think that there is a lot of power in novelty, and that's what I wanted to push here.</p>
                         <p>It will soon be available for purchase on your app store!</p>
                     </div>
                 </div>
-                <div class="design-img-con">
+                <div class="mobile-img-con">
                     <img class="swell design-img" src="./images/Home_Screen.png" alt="TallyWho Mockup">
                     <img class="swell design-img" src="./images/Countdown_Screen.png" alt="TallyWho Mockup">
                     <img class="swell design-img" src="./images/Dice_Screen.png" alt="TallyWho Mockup">
                 </div>
-                <div class="design-img-con">
+                <div class="mobile-img-con">
                     <img class="swell design-img" src="./images/AddPlayer_Screen.png" alt="TallyWho Mockup">
                     <img class="swell design-img" src="./images/Histories_Screen.png" alt="TallyWho Mockup">
                 </div>
