Updated Html and CSS for About section
The HTML and CSS is now much cleaner and smoothly adapts to the screen sizes, now fitting mobile resolutions.

Next I need to make these adjustments in the Projects section

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Ben Ikeler</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/portfolio.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <script src="./js/portfolio.js" defer></script>
@@ -44,41 +44,43 @@
     <section class="col-con" id="about">
         <div class="width-fix two-columns">
             <div class="column">
-                <div class="about-text">
-                    <p class="section-title">About</p>
-                    <p>Hey, I'm Ben! I started my career as a professional artist and after learning how to be a developer, found a passion for creating with code.</p>
-                    <p>I am a graduate of The Tech Academy's Software Developer Boot Camp, and I'm proficient in various programming languages such as: HTML, CSS, JavaScript, SQL, C# and more. For more info on me, check out my <a href="https://drive.google.com/file/d/1N4mP8yWnsjIxQnvjwRB6u_33w38-xKrz/view?usp=share_link" target="_blank">resume</a> or jump over to my <a href="https://www.linkedin.com/in/benikeler/" target="_blank">LinkedIn page</a>.</p>
-                    <p>As a full-stack developer, I would love to work with you on your project. <a href="#contact">Contact</a> me below!</p>
+                <div class="about-content">
+                    <p id="about-sect-title" class="section-title">About</p>
+                    <div class="about-info content-wrapper">
+                        <p>Hey, I'm Ben! I started my career as a professional artist and after learning how to be a developer, found a passion for creating with code.</p>
+                        <p>I am a graduate of The Tech Academy's Software Developer Boot Camp, and I'm proficient in various programming languages such as: HTML, CSS, JavaScript, SQL, C# and more. For more info on me, check out my <a href="https://drive.google.com/file/d/1N4mP8yWnsjIxQnvjwRB6u_33w38-xKrz/view?usp=share_link" target="_blank">resume</a> or jump over to my <a href="https://www.linkedin.com/in/benikeler/" target="_blank">LinkedIn page</a>.</p>
+                        <p>As a full-stack developer, I would love to work with you on your project. <a href="#contact">Contact</a> me below!</p>
+                    </div>
                 </div>
                 <div class="pill-container">
-                    <div class="pill">
-                        <p>C#</p>
-                    </div>
-                    <div class="pill">
-                        <p>.NET</p>
-                    </div>
-                    <div class="pill">
-                        <p>Python</p>
-                    </div>
-                    <div class="pill">
-                        <p>HTML</p>
-                    </div>
-                    <div class="pill">
-                        <p>CSS</p>
-                    </div>
-                    <div class="pill">
-                        <p>JS</p>
-                    </div>
-                </div>
-                <div style="margin-top: 20px;" class="pill-container">
-                    <div class="pill">
-                        <p>SQL</p>
-                    </div>
-                    <div class="pill">
-                        <p>Flutter/Dart</p>
-                    </div>
-                    <div class="pill">
-                        <p>Azure</p>
+                    <div class="pill-row">
+                        <div class="pill">
+                            <p>C#</p>
+                        </div>
+                        <div class="pill">
+                            <p>.NET</p>
+                        </div>
+                        <div class="pill">
+                            <p>Python</p>
+                        </div>
+                        <div class="pill">
+                            <p>HTML</p>
+                        </div>
+                        <div class="pill">
+                            <p>CSS</p>
+                        </div>
+                        <div class="pill">
+                            <p>JS</p>
+                        </div>
+                        <div class="pill">
+                            <p>SQL</p>
+                        </div>
+                        <div class="pill">
+                            <p>Flutter/Dart</p>
+                        </div>
+                        <div class="pill">
+                            <p>Azure</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -100,7 +102,7 @@
                         <img class="swell" src="./images/projs-pic_dark.png" alt="Project 1 Image">
                     </div>
                     <div class="column">
-                        <div class="projects-text">
+                        <div class="projects-text content-wrapper">
                             <p class="section-title">Projects</p>
                             <p>>>> Check out some of my projects >>></p>
                             <p>If you want to see some of my open projects here's my GitHub!</p>
