Fixed Contact Section
Moved two-columns class to better solve the solution of dynamically adjusting to mobile resolutions.

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 
     <!-- CONTACT SECTION -->
     <section id="contact" class="contact">
-        <div class="width-fix two-columns">
-            <div class="col-con">
+        <div class="width-fix">
+            <div class="col-con two-columns">
                 <div class="column">
                     <p class="section-title">Contact</p>
                     <div class="linkedin">
